1) поработал над самим простым приложением - в первой версии формировалась просто учечка памяти через заполнение простого массива, сейчас добавил неполное вычищение коллекции, а также нагрузку cpu по перебору элементов массива, чтобы приложение работало более менее реалистично 2) написал запускатор этого прилоежния с разными параметрами GC и сбором статистики по 10 запусков на каждый  gc. 3) результат оформил в Conclusions.md - несмотря на разное время работы самих gc, отзывчивость работы самого приложения приктически не изменилась